--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -76,6 +76,25 @@
     "duct_enclosure": "Duct Enclosure"
   }
   ,
+  "service_page": {
+    "hero_prefix1": "Professional",
+    "hero_orange1": "Insulation",
+    "hero_prefix2": "and",
+    "hero_orange2": "Fire protection",
+    "hero_suffix": "Services.",
+    "hero_sub1": "Our certified solutions ensure safety, performance and",
+    "hero_sub2": "strict compliance.",
+    "card_desc": "Lorem ipsum",
+    "process_heading": "Our Process",
+    "process1": "Contract",
+    "process2": "Planning",
+    "process3": "Implementation",
+    "process4": "Delivery",
+    "cta_line1": "Need a fire protection solution?",
+    "cta_line2": "Request a quote now",
+    "request_quote": "Request a Quote"
+  }
+  ,
   "client_testimonials": {
     "heading": "What Our Client Says",
     "testimonial1": "Working with ITF-PRO was a great experience from start to finish. Their team was professional, responsive, and clearly experts in fire protection and thermal insulation. The project was completed on time and fully compliant with safety standards.",
@@ -105,5 +124,79 @@
     "fast_delivery_desc": "We pride ourselves on efficient project management and timely delivery, completing projects on schedule without compromising on quality or safety standards.",
     "modern_materials_title": "Modern Materials",
     "modern_materials_desc": "We use only the latest, high-performance materials and cutting-edge techniques."
+  },
+  "contact": {
+    "title_prefix": "Contact",
+    "title_suffix": "Us",
+    "subtitle": "Reliable Solutions in Insulation and Fire Protection",
+    "feature_staff": "Professional Staff",
+    "feature_satisfaction": "100% Satisfaction",
+    "feature_testing": "Accurate Testing",
+    "feature_pricing": "Transparent Pricing",
+    "request_title": "Request A Quote",
+    "request_desc": "Complete control over products allow us to offer our customers the best quality, prices and services. We take great pride in everything that we do in Jhontraktor.",
+    "info_heading_line1": "Contact",
+    "info_heading_line2": "Info",
+    "our_location": "Our Location",
+    "quick_contact": "Quick Contact",
+    "opening_hours": "Opening Hours",
+    "opening_days": "Monday - Friday",
+    "opening_time": "08:00 AM - 06:00 PM",
+    "cta_line": "Do You Have Any Question, Just Contact Us To Get Help!",
+    "contact_button": "Contact Us",
+    "form": {
+      "name": "Name",
+      "email": "Email",
+      "phone": "Phone",
+      "details": "Additional Details!",
+      "select_service": "Select Your Service",
+      "opt_web": "Web Development",
+      "opt_mobile": "Mobile App",
+      "opt_uiux": "UI/UX Design",
+      "opt_consulting": "Consulting",
+      "opt_other": "Other",
+      "error_name": "Please enter your name (min 2 characters).",
+      "error_email": "Please enter a valid email.",
+      "error_phone": "Please enter a valid phone (min 10 digits).",
+      "error_service": "Please select a service.",
+      "error_details": "Please provide at least 10 characters.",
+      "submit": "Submit Request",
+      "submitting": "Submitting...",
+      "submit_success": "Thank you! Your request has been submitted successfully.",
+      "submit_error": "Failed to submit the form. Please try again.",
+      "submit_error_generic": "An error occurred. Please try again."
+    }
+  },
+  "project": {
+    "title_prefix": "Our",
+    "title_suffix": "Project",
+    "subtitle_line1": "Explore a showcase of our recent projects.",
+    "subtitle_line2": "Highlighting our expertise in insulation and fire protection solutions.",
+    "featured_heading": "Featured Projects",
+    "card_a": "Project A",
+    "card_b": "Project B",
+    "card_c": "Project C",
+    "card_desc": "Lorem ipsum",
+    "load_more": "Load More",
+    "learn_more": "Learn More",
+    "learn_more_desc": "Discover how we can help your insulation and fire protection needs",
+    "get_in_touch": "Get In Touch"
+  },
+  "footer_extra": {},
+  "footer": {
+    "aboutHeading": "About Us",
+    "aboutText": "Reliable Solutions in Insulation and Fire Protection. We are committed to providing expert fireproofing and thermal insulation services. Our certified professionals ensure high performance and durability for your structures. Contact us to protect your structures with confidence",
+    "officeHeading": "Office",
+    "addressLine1": "18 Office Park Building 21th Floor Unit C.",
+    "addressCity": "Somewhere city, France,",
+    "addressZip": "12520",
+    "contactHeading": "Contact",
+    "email": "contact@itf-pro.fr",
+    "phone": "(+33) 07 -58-88-37-18",
+    "quickLinks": "Quick Links",
+    "newsletter_label": "Subscribe To Our Newsletter:",
+    "newsletter_placeholder": "Enter your email address",
+    "newsletter_aria": "Newsletter email",
+    "subscribe": "Subscribe"
   }
 }
