--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -76,6 +76,25 @@
     "duct_enclosure": "Enceinte De Conduits"
   }
   ,
+  "service_page": {
+    "hero_prefix1": "Services professionnels d'",
+    "hero_orange1": "isolation",
+    "hero_prefix2": "et de",
+    "hero_orange2": "protection incendie",
+    "hero_suffix": "",
+    "hero_sub1": "Nos solutions certifiées garantissent la sécurité et la performance",
+    "hero_sub2": "avec une stricte conformité.",
+    "card_desc": "Lorem ipsum",
+    "process_heading": "Notre Processus",
+    "process1": "Contrat",
+    "process2": "Planification",
+    "process3": "Mise en œuvre",
+    "process4": "Livraison",
+    "cta_line1": "Besoin d'une solution de protection incendie ?",
+    "cta_line2": "Demandez un devis maintenant",
+    "request_quote": "Demander un devis"
+  }
+  ,
   "client_testimonials": {
     "heading": "Ce Que Disent Nos Clients",
     "testimonial1": "Travailler avec ITF-PRO a été une excellente expérience du début à la fin. Leur équipe était professionnelle, réactive et clairement experte en protection contre l'incendie et isolation thermique. Le projet a été terminé à temps et entièrement conforme aux normes de sécurité.",
@@ -105,5 +124,79 @@
     "fast_delivery_desc": "Nous nous enorgueillissons de la gestion de projet efficace et de la livraison en temps opportun, en terminant les projets à l'horaire sans compromettre la qualité ou les normes de sécurité.",
     "modern_materials_title": "Matériaux Modernes",
     "modern_materials_desc": "Nous utilisons uniquement les matériaux haute performance les plus récents et les techniques de pointe."
+  },
+  "contact": {
+    "title_prefix": "Contactez",
+    "title_suffix": "Nous",
+    "subtitle": "Des solutions fiables en isolation et protection incendie",
+    "feature_staff": "Personnel professionnel",
+    "feature_satisfaction": "Satisfaction 100%",
+    "feature_testing": "Tests précis",
+    "feature_pricing": "Tarification transparente",
+    "request_title": "Demander un devis",
+    "request_desc": "Un contrôle complet des produits nous permet d'offrir à nos clients la meilleure qualité, les meilleurs prix et services. Nous sommes fiers de tout ce que nous faisons chez Jhontraktor.",
+    "info_heading_line1": "Contact",
+    "info_heading_line2": "Infos",
+    "our_location": "Notre emplacement",
+    "quick_contact": "Contact rapide",
+    "opening_hours": "Heures d'ouverture",
+    "opening_days": "Lundi - Vendredi",
+    "opening_time": "08:00 - 18:00",
+    "cta_line": "Vous avez une question ? Contactez-nous pour obtenir de l'aide !",
+    "contact_button": "Nous contacter",
+    "form": {
+      "name": "Nom",
+      "email": "E-mail",
+      "phone": "Téléphone",
+      "details": "Détails supplémentaires !",
+      "select_service": "Sélectionnez votre service",
+      "opt_web": "Développement Web",
+      "opt_mobile": "Application Mobile",
+      "opt_uiux": "Conception UI/UX",
+      "opt_consulting": "Conseil",
+      "opt_other": "Autre",
+      "error_name": "Veuillez saisir votre nom (2 caractères min).",
+      "error_email": "Veuillez saisir un e-mail valide.",
+      "error_phone": "Veuillez saisir un téléphone valide (10 chiffres min).",
+      "error_service": "Veuillez sélectionner un service.",
+      "error_details": "Veuillez fournir au moins 10 caractères.",
+      "submit": "Envoyer la demande",
+      "submitting": "Envoi...",
+      "submit_success": "Merci ! Votre demande a été envoyée avec succès.",
+      "submit_error": "Échec de l'envoi du formulaire. Veuillez réessayer.",
+      "submit_error_generic": "Une erreur s'est produite. Veuillez réessayer."
+    }
+  },
+  "project": {
+    "title_prefix": "Nos",
+    "title_suffix": "Projets",
+    "subtitle_line1": "Découvrez une sélection de nos projets récents.",
+    "subtitle_line2": "Mettant en avant notre expertise en isolation et protection incendie.",
+    "featured_heading": "Projets mis en avant",
+    "card_a": "Projet A",
+    "card_b": "Projet B",
+    "card_c": "Projet C",
+    "card_desc": "Lorem ipsum",
+    "load_more": "Charger plus",
+    "learn_more": "En savoir plus",
+    "learn_more_desc": "Découvrez comment nous pouvons répondre à vos besoins en isolation et protection incendie",
+    "get_in_touch": "Nous contacter"
+  },
+  "footer_extra": {},
+  "footer": {
+    "aboutHeading": "À propos",
+    "aboutText": "Solutions fiables en isolation et protection contre l'incendie. Nous nous engageons à fournir des services experts d'imperméabilisation au feu et d'isolation thermique. Nos professionnels certifiés garantissent des performances élevées et la durabilité de vos structures. Contactez-nous pour protéger vos structures en toute confiance",
+    "officeHeading": "Bureau",
+    "addressLine1": "18 Office Park Building 21th Floor Unit C.",
+    "addressCity": "Somewhere city, France,",
+    "addressZip": "12520",
+    "contactHeading": "Contact",
+    "email": "contact@itf-pro.fr",
+    "phone": "(+33) 07 -58-88-37-18",
+    "quickLinks": "Liens rapides",
+    "newsletter_label": "Abonnez-vous à notre newsletter :",
+    "newsletter_placeholder": "Entrez votre adresse e-mail",
+    "newsletter_aria": "E-mail de la newsletter",
+    "subscribe": "S’abonner"
   }
 }
