mistakes resolved in home + about

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,7 +44,7 @@
   ,
   "testimonial": {
     "years": "15 years",
-    "heading": "of experience!",
+    "heading": "of Experience!",
     "para1": "With over 15 years of proven experience, ITF-PRO brings unmatched expertise in thermal insulation and fire protection. Our certified professionals understand the highest industry standards and safety regulations, ensuring every project meets strict compliance requirements.",
     "para2": "We take pride in delivering reliable, high-performance solutions that protect buildings and the people inside them.",
     "signature": "Mian Safdar",
@@ -103,7 +103,7 @@
     "testimonial2": "Exceptional service and quality work. ITF-PRO delivered exactly what we needed for our commercial building project. Their attention to detail and commitment to safety regulations is outstanding.",
     "client2_name": "Sarah Johnson", 
     "client2_position": "Project Manager, BuildCorp",
-    "testimonial3": "ITF-PRO's expertise in thermal insulation saved us both time and money. The team was knowledgeable, professional, and delivered results that exceeded our expectations.",
+    "testimonial3": "ITF-PRO's expertise in thermal insulation saved us both time and money. The team was knowledgeable, professional, and delivered results that exceeded our expectations. Their commitment to quality and safety standards is truly impressive, and we highly recommend their services.",
     "client3_name": "Michael Chen",
     "client3_position": "Operations Director, TechSpace"
   },
