--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -44,7 +44,7 @@
   ,
   "testimonial": {
     "years": "15 ans",
-    "heading": "d'expérience!",
+    "heading": "d'Expérience!",
     "para1": "Avec plus de 15 ans d'expérience éprouvée, ITF-PRO apporte une expertise inégalée en isolation thermique et protection contre l'incendie. Nos professionnels certifiés comprennent les normes industrielles les plus élevées et les réglementations de sécurité, garantissant que chaque projet répond aux strictes exigences de conformité.",
     "para2": "Nous sommes fiers de fournir des solutions fiables et performantes qui protègent les bâtiments et les personnes qui les occupent.",
     "signature": "Mian Safdar",
@@ -103,7 +103,7 @@
     "testimonial2": "Service exceptionnel et travail de qualité. ITF-PRO a livré exactement ce dont nous avions besoin pour notre projet de bâtiment commercial. Leur attention aux détails et leur engagement envers les réglementations de sécurité sont remarquables.",
     "client2_name": "Sarah Johnson",
     "client2_position": "Chef de Projet, BuildCorp",
-    "testimonial3": "L'expertise d'ITF-PRO en isolation thermique nous a fait économiser du temps et de l'argent. L'équipe était compétente, professionnelle et a livré des résultats qui ont dépassé nos attentes.",
+    "testimonial3": "L'expertise d'ITF-PRO en isolation thermique nous a fait économiser du temps et de l'argent. L'équipe était compétente, professionnelle et a livré des résultats qui ont dépassé nos attentes. Leur engagement envers la qualité et les normes de sécurité est vraiment impressionnant, et nous recommandons vivement leurs services.",
     "client3_name": "Michael Chen",
     "client3_position": "Directeur des Opérations, TechSpace"
   },
