ANimations added on home + about

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -47,8 +47,8 @@
     "heading": "of Experience!",
     "para1": "With over 15 years of proven experience, ITF-PRO brings unmatched expertise in thermal insulation and fire protection. Our certified professionals understand the highest industry standards and safety regulations, ensuring every project meets strict compliance requirements.",
     "para2": "We take pride in delivering reliable, high-performance solutions that protect buildings and the people inside them.",
-    "signature": "Mian Safdar",
-    "title": "Mian Safdar - Founder"
+    "signature": "Imam Safdar",
+    "title": "Imam Safdar - Founder"
   }
   ,
   "process": {
