--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -47,8 +47,8 @@
     "heading": "d'Expérience!",
     "para1": "Avec plus de 15 ans d'expérience éprouvée, ITF-PRO apporte une expertise inégalée en isolation thermique et protection contre l'incendie. Nos professionnels certifiés comprennent les normes industrielles les plus élevées et les réglementations de sécurité, garantissant que chaque projet répond aux strictes exigences de conformité.",
     "para2": "Nous sommes fiers de fournir des solutions fiables et performantes qui protègent les bâtiments et les personnes qui les occupent.",
-    "signature": "Mian Safdar",
-    "title": "Mian Safdar - Fondateur"
+    "signature": "Imam Safdar",
+    "title": "Imam Safdar - Fondateur"
   }
   ,
   "process": {
